--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="label_welcome_message">Welcome to Twittererer!</string>
     <string name="label_tag_line">Please log in with your Twitter account</string>
     <string name="content_description_avatar">avatar image</string>
+    <string name="label_send_tweet">Send tweet</string>
+    <string name="label_what_is_happening">What\'s happening?</string>
+    <string name="action_tweet">Tweet</string>
+    <string name="alert_tweet_successful">Great Success!</string>
+    <string name="alert_tweet_failed">Sending tweet failed... :(</string>
 </resources>
